# tidskrift

./: .gitconfig  .gitignore  Makefile  edgedb.toml  pyproject.toml  pytest.ini
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql
src/: main.py
src/tidskrift/auth/: __init__.py  auth.py  password.py  tokens.py
src/tidskrift/db/: __init__.py
src/tidskrift/db/edgemapper/: query_builder_mixin.py  usermapper.py
src/tidskrift/db/queries/: clubquery.py  userquery.py
src/tidskrift/model/api/: clubs.py  user.py
src/tidskrift/routers/: auth.py  clubs.py  users.py
src/tidskrift/util/: filtertools.py
tests/: conftest.py
tests/queries/: test_user_queries.py
tests/routers/: test_users_router.py
