[tool.poetry]
name = "tidskrift"
version = "0.1.0"
description = ""
authors = ["Cameron Jones <camandrewjones@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
edgedb = "^0.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
isort = "^5.10.1"
mypy = "^0.961"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
